HTTP data sources quick and easy.


$Id$
==================  1.5.0-dev ==================
Upgrading from Solr 1.4
----------------------

Versions of Major Components
---------------------

Detailed Change List
----------------------

New Features
----------------------

* SOLR-1525 allow DIH to refer to core properties (noble)

Optimizations
----------------------

Bug Fixes
----------------------



Other Changes
----------------------


Build
----------------------


Documentation
----------------------

================== Release 1.4.0 ==================

Upgrading from Solr 1.3
-----------------------

Evaluator API has been changed in a non back-compatible way. Users who have developed custom Evaluators will need
to change their code according to the new API for it to work. See SOLR-996 for details.

The formatDate evaluator's syntax has been changed. The new syntax is formatDate(<variable>, '<format_string>').
For example, formatDate(x.date, 'yyyy-MM-dd'). In the old syntax, the date string was written without a single-quotes.
The old syntax has been deprecated and will be removed in 1.5, until then, using the old syntax will log a warning.

The Context API has been changed in a non back-compatible way. In particular, the Context.currentProcess() method
now returns a String describing the type of the current import process instead of an int. Similarily, the public
constants in Context viz. FULL_DUMP, DELTA_DUMP and FIND_DELTA are changed to a String type. See SOLR-969 for details.

The EntityProcessor API has been simplified by moving logic for applying transformers and handling multi-row outputs
from Transformers into an EntityProcessorWrapper class. The EntityProcessor#destroy is now called once per
parent-row at the end of row (end of data). A new method EntityProcessor#close is added which is called at the end
of import.

In Solr 1.3, if the last_index_time was not available (first import) and a delta-import was requested, a full-import