@@ -49,6 +49,7 @@ import org.slf4j.LoggerFactory;
 public class TemplateTransformer extends Transformer {
 
   private static final Logger LOG = LoggerFactory.getLogger(TemplateTransformer.class);
+  private Map<String ,List<String>> templateVsVars = new HashMap<String, List<String>>();
 
   @SuppressWarnings("unchecked")
   public Object transformRow(Map<String, Object> row, Context context) {
@@ -67,7 +68,7 @@ public class TemplateTransformer extends Transformer {
 
       // Verify if all variables can be resolved or not
       boolean resolvable = true;
-      List<String> variables = TemplateString.getVariables(expr);
+      List<String> variables = getVars(expr);
       for (String v : variables) {
         if (resolver.resolve(v) == null) {
           LOG.warn("Unable to resolve variable: " + v
@@ -78,12 +79,25 @@ public class TemplateTransformer extends Transformer {
 
       if (!resolvable)
         continue;
+      if(variables.size() == 1 && expr.startsWith("${") && expr.endsWith("}")){
+        row.put(column, resolver.resolve(variables.get(0)));
+      } else {
+        row.put(column, resolver.replaceTokens(expr));
+      }
 
-      row.put(column, resolver.replaceTokens(expr));
     }
 
 
     return row;
+  }
+
+  private List<String> getVars(String expr) {
+    List<String> result = this.templateVsVars.get(expr);
+    if(result == null){
+      result = TemplateString.getVariables(expr);
+      this.templateVsVars.put(expr, result);
+    }
+    return result;
   }
 
   public static final String TEMPLATE = "template";
